--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -95,8 +95,8 @@ jobs:
         with:
           name: current-submission
           path: submission.tar.gz
-  labwork_docker_run:
-    name: Test project inside labwork-docker container
+  load_assignments:
+    name: Load assignments from repository files
     needs: build_tar_gz
     runs-on: ubuntu-latest
     steps:
@@ -113,7 +113,42 @@ jobs:
             echo "No current assignment found, using default: \`$ass\`" >> $GITHUB_STEP_SUMMARY
             echo "You can set the current assignment by creating a file \`.current_assignment\` containing only the assignment name in the root of your repository. You can also set the default assignment by setting the \`DEFAULT_ASSIGNMENT\` environment variable in the workflow file." >> $GITHUB_STEP_SUMMARY
           fi
-          echo "ASSIGNMENT=$ass" >> $GITHUB_ENV
+          echo "CURRENT_ASSIGNMENT=$ass" >> $GITHUB_ENV
+      - name: Load past assignments
+        run: |
+          if [ -f .past_assignments ]; then
+            echo "Loaded past assignments:"
+            # join lines with comma and store in github env var CURRENT_ASSIGNMENT
+            awk 'BEGIN{OFS=","} FNR==1{first=$0;next} {val=val?val OFS $0:$0} END{echo first FS val}' .past_assignments >> $GITHUB_ENV
+          else
+            echo "No past assignments found"
+            echo "## WARNING" >> $GITHUB_STEP_SUMMARY
+            echo "No past assignments found" >> $GITHUB_STEP_SUMMARY
+            echo "You can set past assignments by creating a file \`.past_assignments\` containing one assignment name per line in the root of your repository." >> $GITHUB_STEP_SUMMARY
+          fi
+  labwork_docker_run:
+    name: Test project inside labwork-docker container
+    needs: load_assignments
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        assignment: [ ${{ env.PAST_ASSIGNMENTS }}, ${{ env.CURRENT_ASSIGNMENT }} ]
+    steps:
+      # - uses: actions/checkout@v3
+      # - name: Load current assignment
+      #   run: |
+      #     if [ -f .current_assignment ]; then
+      #       ass=$(cat .current_assignment | head -n 1)
+      #       echo "Loaded current assignment: $ass"
+      #     else
+      #       ass=${{ inputs.DEFAULT_ASSIGNMENT }}
+      #       echo "No current assignment found, using default: $ass"
+      #       echo "## WARNING" >> $GITHUB_STEP_SUMMARY
+      #       echo "No current assignment found, using default: \`$ass\`" >> $GITHUB_STEP_SUMMARY
+      #       echo "You can set the current assignment by creating a file \`.current_assignment\` containing only the assignment name in the root of your repository. You can also set the default assignment by setting the \`DEFAULT_ASSIGNMENT\` environment variable in the workflow file." >> $GITHUB_STEP_SUMMARY
+      #     fi
+      #     echo "ASSIGNMENT=$ass" >> $GITHUB_ENV
       - name: Clone repository johndoe31415/labwork-docker
         uses: actions/checkout@v3
         with:
@@ -135,9 +170,9 @@ jobs:
           CLIENT_ID: ${{ secrets.CLIENT_ID }}
         run: |
           echo "Executing labwork-docker with submission: $CLIENT_ID | $SERVER | $TARBALL"
-          echo "## Container execution logs" >> $GITHUB_STEP_SUMMARY
+          echo "## Container execution logs (\`${{ matrix.assignment  }}\`)" >> $GITHUB_STEP_SUMMARY
           echo '```' >> $GITHUB_STEP_SUMMARY
-          ./run-testcases -n -a ${{ env.ASSIGNMENT  }} -c $CLIENT_ID -u $SERVER $TARBALL >> $GITHUB_STEP_SUMMARY
+          ./run-testcases -n -a ${{ matrix.assignment }} -c $CLIENT_ID -u $SERVER $TARBALL >> $GITHUB_STEP_SUMMARY
           echo '```' >> $GITHUB_STEP_SUMMARY
   get_stats:
     name: Print stats
