--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -133,7 +133,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        assignment: [${{ env.PAST_ASSIGNMENTS }}]
+        assignment: ${{ env.PAST_ASSIGNMENTS }},${{ env.CURRENT_ASSIGNMENT }}
     steps:
       # - uses: actions/checkout@v3
       # - name: Load current assignment
