--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -113,19 +113,21 @@ jobs:
             echo "No current assignment found, using default: \`$ass\`" >> $GITHUB_STEP_SUMMARY
             echo "You can set the current assignment by creating a file \`.current_assignment\` containing only the assignment name in the root of your repository. You can also set the default assignment by setting the \`DEFAULT_ASSIGNMENT\` environment variable in the workflow file." >> $GITHUB_STEP_SUMMARY
           fi
-          echo "CURRENT_ASSIGNMENT=$ass" >> $GITHUB_ENV
+          echo "CURRENT_ASSIGNMENT='$ass]'" >> $GITHUB_ENV
       - name: Load past assignments
         run: |
           if [ -f .past_assignments ]; then
             echo "Loaded past assignments:"
-            # join lines with comma and store in github env var CURRENT_ASSIGNMENT
-            awk 'BEGIN{OFS=","} FNR==1{first=$0;next} {val=val?val OFS $0:$0} END{echo first FS val}' .past_assignments >> $GITHUB_ENV
+            # join lines with comma and store in $past
+            $past=$(cat .past_assignments | tr ' ' ',')
           else
             echo "No past assignments found"
             echo "## WARNING" >> $GITHUB_STEP_SUMMARY
             echo "No past assignments found" >> $GITHUB_STEP_SUMMARY
             echo "You can set past assignments by creating a file \`.past_assignments\` containing one assignment name per line in the root of your repository." >> $GITHUB_STEP_SUMMARY
           fi
+          echo "PAST_ASSIGNMENTS='[$past'" >> $GITHUB_ENV
+          echo {{ env.PAST_ASSIGNMENTS }}{{ env.CURRENT_ASSIGNMENT }}
   labwork_docker_run:
     name: Test project inside labwork-docker container
     needs: load_assignments
@@ -133,7 +135,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        assignment: ${{ env.PAST_ASSIGNMENTS }},${{ env.CURRENT_ASSIGNMENT }}
+        assignment: 
     steps:
       # - uses: actions/checkout@v3
       # - name: Load current assignment
