--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -135,7 +135,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        assignment: {{ env.PAST_ASSIGNMENTS }}{{ env.CURRENT_ASSIGNMENT }}
+        # assignment: {{ env.PAST_ASSIGNMENTS }}{{ env.CURRENT_ASSIGNMENT }}
+        assignment: [{{ env.CURRENT_ASSIGNMENT }}]
     steps:
       # - uses: actions/checkout@v3
       # - name: Load current assignment
