--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -97,6 +97,7 @@ jobs:
           path: submission.tar.gz
   load_assignments:
     name: Load assignments from repository files
+    id: load-assignments
     needs: build_tar_gz
     runs-on: ubuntu-latest
     steps:
@@ -113,29 +114,26 @@ jobs:
             echo "No current assignment found, using default: \`$ass\`" >> $GITHUB_STEP_SUMMARY
             echo "You can set the current assignment by creating a file \`.current_assignment\` containing only the assignment name in the root of your repository. You can also set the default assignment by setting the \`DEFAULT_ASSIGNMENT\` environment variable in the workflow file." >> $GITHUB_STEP_SUMMARY
           fi
-          echo "CURRENT_ASSIGNMENT='$ass]'" >> $GITHUB_ENV
+          echo "::set-output name=current::$ass"
       - name: Load past assignments
         run: |
           if [ -f .past_assignments ]; then
-            echo "Loaded past assignments:"
-            # join lines with comma and store in $past
-            $past=$(cat .past_assignments | tr ' ' ',')
+            echo "Loaded past assignments: $(cat .past_assignments | tr ' ' ', ')"
+            echo "::set-output name=past::$(cat .past_assignments | tr ' ' ',')"
           else
             echo "No past assignments found"
             echo "## WARNING" >> $GITHUB_STEP_SUMMARY
             echo "No past assignments found" >> $GITHUB_STEP_SUMMARY
             echo "You can set past assignments by creating a file \`.past_assignments\` containing one assignment name per line in the root of your repository." >> $GITHUB_STEP_SUMMARY
           fi
-          echo "PAST_ASSIGNMENTS='[$past'" >> $GITHUB_ENV
-          echo {{ env.PAST_ASSIGNMENTS }}{{ env.CURRENT_ASSIGNMENT }}
   labwork_docker_run:
     name: Test project inside labwork-docker container
     needs: load_assignments
     runs-on: ubuntu-latest
     strategy:
-      matrix:
-        assignment: [{{ env.CURRENT_ASSIGNMENT }}]
       fail-fast: false
+      matrix:
+        assignment: [ ${{ needs.load_assignments.outputs.past }}, ${{ needs.load_assignments.outputs.current }} ]
     steps:
       # - uses: actions/checkout@v3
       # - name: Load current assignment
