--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -115,17 +115,20 @@ jobs:
             echo "You can set the current assignment by creating a file \`.current_assignment\` containing only the assignment name in the root of your repository. You can also set the default assignment by setting the \`DEFAULT_ASSIGNMENT\` environment variable in the workflow file." >> $GITHUB_STEP_SUMMARY
           fi
           echo "::set-output name=current::$ass"
-      - name: Load past assignments
+      - name: Load past assignments and combine with current
         run: |
           if [ -f .past_assignments ]; then
-            echo "Loaded past assignments: $(cat .past_assignments | tr ' ' ', ')"
-            echo "::set-output name=past::$(cat .past_assignments | tr ' ' ',')"
+            $past_as_json=$(cat .past_assignments | jq -R -s -c 'split("\n")')
+            echo "Loaded past assignments: $past_as_json"
           else
             echo "No past assignments found"
             echo "## WARNING" >> $GITHUB_STEP_SUMMARY
             echo "No past assignments found" >> $GITHUB_STEP_SUMMARY
             echo "You can set past assignments by creating a file \`.past_assignments\` containing one assignment name per line in the root of your repository." >> $GITHUB_STEP_SUMMARY
           fi
+          $joined=$(echo "[$past_as_json, \"${{ steps.load-assignments.outputs.current }}\"]" | jq -c -s 'add')
+          echo "::set-output name=all::$joined"
+          echo $joined
   labwork_docker_run:
     name: Test project inside labwork-docker container
     needs: load_assignments
@@ -133,7 +136,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        assignment: [ ${{ needs.load_assignments.outputs.past }}, ${{ needs.load_assignments.outputs.current }} ]
+        assignment: ${{ fromJson(needs.load_assignments.outputs.all) }}
     steps:
       # - uses: actions/checkout@v3
       # - name: Load current assignment
