--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -125,8 +125,8 @@ jobs:
             echo "No past assignments found" >> $GITHUB_STEP_SUMMARY
             echo "You can set past assignments by creating a file \`.past_assignments\` containing one assignment name per line in the root of your repository." >> $GITHUB_STEP_SUMMARY
           fi
-          joined_as_json=$(echo "[\"$ass\",${past_as_list[@]}]" | jq -R -s -c 'split(",") | unique')
-          echo "::set-output name=all::$joined_as_json"
+          joined='[$(awk 'BEGIN {ORS=","} {print}' <<< "${past_as_list[@]}")]
+          echo "::set-output name=all::$joined"
           echo $joined_as_json
   labwork_docker_run:
     name: Test project inside labwork-docker container
@@ -135,7 +135,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        assignment: ${{ fromJson(needs.load_assignments.outputs.all) }}
+        assignment: ${{ needs.load_assignments.outputs.all }}
     steps:
       # - uses: actions/checkout@v3
       # - name: Load current assignment
