--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -125,9 +125,9 @@ jobs:
             echo "No past assignments found" >> $GITHUB_STEP_SUMMARY
             echo "You can set past assignments by creating a file \`.past_assignments\` containing one assignment name per line in the root of your repository." >> $GITHUB_STEP_SUMMARY
           fi
-          joined='[$(awk 'BEGIN {ORS=","} {print}' <<< "${past_as_list[@]}")]
+          joined='[$(awk -vORS=, -v OFS= '{ print "\""$1"\"" }' <<< "${past_as_list[*]}"), "${{ steps.load-current-assignment.outputs.current }}"]'
           echo "::set-output name=all::$joined"
-          echo $joined_as_json
+          echo $joined
   labwork_docker_run:
     name: Test project inside labwork-docker container
     needs: load_assignments
