--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -113,19 +113,19 @@ jobs:
             echo "No current assignment found, using default: \`$ass\`" >> $GITHUB_STEP_SUMMARY
             echo "You can set the current assignment by creating a file \`.current_assignment\` containing only the assignment name in the root of your repository. You can also set the default assignment by setting the \`DEFAULT_ASSIGNMENT\` environment variable in the workflow file." >> $GITHUB_STEP_SUMMARY
           fi
-          echo "::set-output name=current::$ass"
+          echo "CURRENT_ASSIGNMENT=$ass" >> $GITHUB_ENV
       - name: Load past assignments and combine with current
         run: |
           if [ -f .past_assignments ]; then
             mapfile -t past_as_list < .past_assignments
-            echo "Loaded past assignments: $past_as_list"
+            echo "Loaded past assignments: $past_as_list (length: ${#past_as_list[@]})"
           else
             echo "No past assignments found"
             echo "## WARNING" >> $GITHUB_STEP_SUMMARY
             echo "No past assignments found" >> $GITHUB_STEP_SUMMARY
             echo "You can set past assignments by creating a file \`.past_assignments\` containing one assignment name per line in the root of your repository." >> $GITHUB_STEP_SUMMARY
           fi
-          printf -v joined '%s,' "${past_as_list[@]}" "${{ steps.load_assignments.outputs.current }}"
+          printf -v joined '%s,' "${past_as_list[@]}" "${{ env.CURRENT_ASSIGNMENT }}"
           echo "::set-output name=all::$joined"
           echo $joined
   labwork_docker_run:
