--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -126,6 +126,7 @@ jobs:
             echo "You can set past assignments by creating a file \`.past_assignments\` containing one assignment name per line in the root of your repository." >> $GITHUB_STEP_SUMMARY
           fi
           printf -v joined '%s,' "${past_as_list[@]}" "${{ env.CURRENT_ASSIGNMENT }}"
+          joined=${joined%,}
           echo "::set-output name=all::$joined"
           echo $joined
   labwork_docker_run:
@@ -135,7 +136,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        assignment: ${{ needs.load_assignments.outputs.all }}
+        assignment: [${{ needs.load_assignments.outputs.all }}]
     steps:
       # - uses: actions/checkout@v3
       # - name: Load current assignment
