--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -128,8 +128,7 @@ jobs:
           printf -v joined '%s,' "${past_as_list[@]}" "${{ env.CURRENT_ASSIGNMENT }}"
           joined=${joined%,}
           joined="[$joined]"
-          echo "::set-output name=all::$joined"
-          echo $joined
+          echo "ALL_ASSIGNMENTS=$joined" >> $GITHUB_ENV
   labwork_docker_run:
     name: Test project inside labwork-docker container
     needs: load_assignments
@@ -137,7 +136,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        assignment: ${{ needs.load_assignments.outputs.all }}
+        assignment: ${{ env.ALL_ASSIGNMENTS }}
     steps:
       # - uses: actions/checkout@v3
       # - name: Load current assignment
