--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -127,10 +127,15 @@ jobs:
             echo "No past assignments found" >> $GITHUB_STEP_SUMMARY
             echo "You can set past assignments by creating a file \`.past_assignments\` containing one assignment name per line in the root of your repository." >> $GITHUB_STEP_SUMMARY
           fi
-          printf -v joined '%s,' "${past_as_list[@]}" "${{ env.CURRENT_ASSIGNMENT }}"
-          joined=${joined%,}
-          joined="[$joined]"
-          echo "::set-output name=assignments::$joined"
+          # printf -v joined '%s,' "${past_as_list[@]}" "${{ env.CURRENT_ASSIGNMENT }}"
+          # joined=${joined%,}
+          # joined="[$joined]"
+          # echo "::set-output name=assignments::$joined"
+          joined=$past_as_list
+          joined+=("${{ env.CURRENT_ASSIGNMENT }}")
+          joined_as_json=$(printf '%s\n' "${joined[@]}" | jq -R . | jq -s .)
+          echo "Joined assignments: $joined_as_json"
+          echo "::set-output name=assignments::$joined_as_json"
   labwork_docker_run:
     name: Test project inside labwork-docker container
     needs: load_assignments
@@ -138,7 +143,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        assignment: ${{ needs.load_assignments.outputs.assignments }}
+        assignment: ${{ fromJson(needs.load_assignments.outputs.assignments) }}
     steps:
       - name: Clone repository johndoe31415/labwork-docker
         uses: actions/checkout@v3
