--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -115,15 +115,15 @@ jobs:
           if [ -f .past_assignments ]; then
             mapfile -t past_as_list < .past_assignments
             echo "Loaded past assignments: $past_as_list (length: ${#past_as_list[@]})"
+            joined=$past_as_list
+            joined+=("${{ env.CURRENT_ASSIGNMENT }}")
           else
-            past_as_list=()
             echo "No past assignments found"
             echo "## WARNING" >> $GITHUB_STEP_SUMMARY
             echo "No past assignments found" >> $GITHUB_STEP_SUMMARY
             echo "You can set past assignments by creating a file \`.past_assignments\` containing one assignment name per line in the root of your repository." >> $GITHUB_STEP_SUMMARY
+            joined=("${{ env.CURRENT_ASSIGNMENT }}")
           fi
-          joined=$past_as_list
-          joined+=("${{ env.CURRENT_ASSIGNMENT }}")
           joined_as_json=$(jq --compact-output --null-input '$ARGS.positional' --args -- "${joined[@]}")
           echo "Joined assignments: $joined_as_json"
           echo "::set-output name=assignments::$joined_as_json"
