--- a/example.yml
+++ b/example.yml
@@ -16,5 +16,6 @@ jobs:
     with:
       TEST_SERVER: 'https://dhbw.johannes-bauer.com/lwsub/' # optional (default: https://dhbw.johannes-bauer.com/lwsub/)
       DEFAULT_ASSIGNMENT: 'labwork01' # optional (default: labwork01)
+      CONTAINER_TIMEOUT: 30 # optional (default: 30)
     secrets:
       CLIENT_ID: ${{ secrets.CLIENT_ID }} # required (can be set in your repository settings)
