cut too long summary

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -165,7 +165,14 @@ jobs:
           echo "Executing labwork-docker with submission for $CLIENT_ID against $SERVER with timeout $TIMEOUT"
           echo "## Container execution logs (\`${{ matrix.assignment  }}\`)" >> $GITHUB_STEP_SUMMARY
           echo '```' >> $GITHUB_STEP_SUMMARY
-          ./run-testcases -n -a ${{ matrix.assignment }} -c $CLIENT_ID -u $SERVER -t $TIMEOUT $TARBALL >> $GITHUB_STEP_SUMMARY
+          output=$(./run-testcases -n -a ${{ matrix.assignment }} -c $CLIENT_ID -u $SERVER -t $TIMEOUT $TARBALL)
+          # max size for $GITHUB_STEP_SUMMARY is 1024k
+          if [ ${#output} -gt 1024000 ]; then
+            echo "ERROR: Output too long, only first 1024k will be shown" >> $GITHUB_STEP_SUMMARY
+            echo "${output:0:1024000}" >> $GITHUB_STEP_SUMMARY
+          else
+            echo "$output" >> $GITHUB_STEP_SUMMARY
+          fi
           echo '```' >> $GITHUB_STEP_SUMMARY
   get_stats:
     name: Print stats
