--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -168,7 +168,7 @@ jobs:
           output=$(./run-testcases -n -a ${{ matrix.assignment }} -c $CLIENT_ID -u $SERVER -t $TIMEOUT $TARBALL)
           # max size for $GITHUB_STEP_SUMMARY is 1024k
           if [ ${#output} -gt 1024000 ]; then
-            echo "ERROR: Output too long, only first 1024k will be shown" >> $GITHUB_STEP_SUMMARY
+            echo "ERROR: Log too long, only first 1024k will be shown" >> $GITHUB_STEP_SUMMARY
             echo "${output:0:1024000}" >> $GITHUB_STEP_SUMMARY
           else
             echo "$output" >> $GITHUB_STEP_SUMMARY
