--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -24,6 +24,11 @@ on:
         type: string
         required: false
         default: 'nightly'
+      REPO_TAG:
+        description: 'Tag of the repository to use'
+        type: string
+        required: false
+        default: 'latest'
     secrets:
       CLIENT_ID:
         required: true
@@ -150,6 +155,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: johndoe31415/labwork-docker
+          ref: ${{ inputs.REPO_TAG }}
       - name: Ping Test-Server
         uses: srt32/uptime@master
         with:
@@ -170,7 +176,7 @@ jobs:
           IMAGE_TAG: ${{ inputs.IMAGE_TAG }}
           TIMEOUT: ${{ inputs.CONTAINER_TIMEOUT }}
         run: |
-          echo "Executing labwork-docker:$IMAGE_TAG with $TARBALL for ${{ matrix.assignment }} against $SERVER with timeout $TIMEOUT"
+          echo "Executing labwork-docker:$IMAGE_TAG with $TARBALL for ${{ matrix.assignment }} against $SERVER (timeout: $TIMEOUT s)"
           echo "## Container execution logs (\`${{ matrix.assignment  }}\`)" >> $GITHUB_STEP_SUMMARY
           echo '```' >> $GITHUB_STEP_SUMMARY
           output=$(./run-testcases -n -a ${{ matrix.assignment }} -c $CLIENT_ID -u $SERVER -i ghcr.io/johndoe31415/labwork-docker:$IMAGE_TAG -t $TIMEOUT $TARBALL)
